base/istio/create-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
--
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
